# ztm-rust

./: .gitignore
activities/: Cargo.toml
clipstash/: Cargo.toml
clipstash/src/lib/: mod.rs
clipstash/src/lib/data/: mod.rs  model.rs  query.rs
clipstash/src/lib/domain/: time.rs
clipstash/src/lib/domain/clip/: mod.rs
clipstash/src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  password.rs  shortcode.rs  title.rs
clipstash/src/lib/service/: action.rs  ask.rs  mod.rs
clipstash/src/lib/web/: context.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
