[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "external"
path = "src/lib/external.rs"

[dependencies]
chrono = "0.4.31"
thiserror = "1.0"
crossbeam-channel = "0.5.8"
colored = "2"
parking_lot = "0.12.1"

